# google_genai_exchange_hackathon

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
backend/agent/: __init__.py  agent.py  diff_agent.py  metadata_agent.py  root_agent.py
backend/agent/prompt/system/: diff_agent_prompt.py  metadata_agent_prompt.py  root_agent_prompt.py
backend/database/: client.py  models.py
backend/utils/: __init__.py  chat.py  file.py  metadata.py  parse_html.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/custom/: diff-button.tsx  logo.tsx  markdown-rendered.tsx  theme-toggle.tsx
frontend/src/lib/: utils.ts
playwright_service/: Dockerfile  hello.py  main.py  pyproject.toml
playwright_service/utils/: parse_html.py
